--- a/exd-storcenternord/exd-akvarie/css/style.css
+++ b/exd-storcenternord/exd-akvarie/css/style.css
@@ -63,25 +63,11 @@ body {
   height: auto;
 }
 
-.image-button span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: black;
-  font-weight: bold;
-  font-size: 32px;
+.fish-button img {
+  max-width: 1%;
+  height: auto;
 }
 
-#fish-button {
-  left: 10%;
-  top: 55vh;
-}
-
-#extra-button {
-  left: 4%;
-  top: 10vh;
-}
 
 .bubble {
   position: absolute;
@@ -196,106 +182,7 @@ body {
   height: 90vh;
 }
 
-.image-bluefish {
-  position: absolute;
-  width: 20px; /* gør fisken mindre */
-  max-width: 20vw; /* skalerer pænt på små/større skærme */
-  bottom: 400px; /* placeret nede */
-  right: 150px; /* placeret i højre hjørne */
-  transform: none; /* fjern tidligere translate */
-  z-index: 3; /* sørg for den ligger over baggrunden */
-  animation: fish-swim 10s linear infinite;
-}
 
-@keyframes fish-swim {
-  0% {
-    transform: translateX(100px);
-  }
-  100% {
-    transform: translateX(-2000px);
-  }
-}
-
-.image-bluefish img {
-  max-width: 600%; /* ændre str på fisken */
-  height: auto; /* bevar proportioner */
-}
-
-.image-yellowfish {
-  position: absolute;
-  width: 20px;
-  max-width: 20vw;
-  bottom: 30px;
-  left: 30px;
-  transform: none;
-  z-index: 3;
-  top: 30px;
-  animation: image-yellowfish 10s linear infinite;
-}
-
-@keyframes image-yellowfish {
-  0% {
-    transform: translateX(-100px);
-  }
-  100% {
-    transform: translateX(2000px);
-  }
-}
-
-.image-yellowfish img {
-  max-width: 400%;
-  height: auto;
-}
-
-.image-greenfish {
-  position: absolute;
-  width: 20px;
-  max-width: 20vw;
-  bottom: 40px;
-  right: 160px;
-  transform: none;
-  z-index: 4;
-  animation: image-greenfish 17s linear infinite;
-}
-
-@keyframes image-greenfish {
-  0% {
-    transform: translateX(100px);
-  }
-  100% {
-    transform: translateX(-2000px);
-  }
-}
-.image-greenfish img {
-  max-width: 700%;
-  height: auto;
-}
-
-.image-nemofish {
-  position: absolute;
-  width: 20px;
-  max-width: 20vw;
-  bottom: 30px;
-  left: 30px;
-  transform: none;
-  z-index: 3;
-  top: 400px;
-  animation: image-nemofish 15s linear infinite;
-}
-
-@keyframes image-nemofish {
-  0% {
-    transform: translateX(-100px);
-  }
-  100% {
-    transform: translateX(2000px);
-  }
-}
-
-.image-nemofish img {
-  max-width: 580%;
-  height: auto;
-}
 
 /* Bestemmer placering af pop-up */
 .facts {
@@ -322,3 +209,121 @@ body {
   opacity: 1;
   transform: translateY(0);
 }
+
+
+/* --- Justerede fisk-placeringer så alle er synlige og forskudt lodret.
+   Hver fisk får entydig animation-navn (ingen globale @keyframes conflicts).
+   Jeg ændrer kun position (left/right + bottom) og animation-navn/direction,
+   så de ikke ligger oveni hinanden. Varigheder er bevaret som i din fil. */
+
+/* Gul kirurgfisk (svømmer højre -> venstre) */
+.gul-kirurgfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: 100%;            /* starter ude til højre */
+  bottom: 8vh;           /* fordelt lodret */
+  z-index: 3;
+  animation: swim-gul 10s linear infinite;
+}
+.gul-kirurgfisk img { max-width: 600%; height: auto; transform: scaleX(-1); }
+@keyframes swim-gul { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
+
+/* Dværgkejserfisk (højre -> venstre) */
+.dvaergkejserfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: 100%;
+  bottom: 18vh;
+  z-index: 3;
+  animation: swim-dvaerg 20s linear infinite;
+}
+.dvaergkejserfisk img { max-width: 600%; height: auto; transform: scaleX(-1); }
+@keyframes swim-dvaerg { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
+
+/* Paletkirurgfisk (ændret: venstre -> højre) */
+.paletkirurgfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: -120%;           /* starter ude til venstre */
+  bottom: 28vh;          /* behold eller justér lodret placering */
+  z-index: 3;
+  animation: swim-palet-right 20s linear infinite; /* nyt animation-navn */
+}
+.paletkirurgfisk img { max-width: 600%; height: auto; transform: scaleX(1); }
+
+@keyframes swim-palet-right {
+  0%   { transform: translateX(0); }     /* starter ved left:-120% */
+  100% { transform: translateX(220vw); } /* bevæger sig langt til højre */
+}
+
+/* Klovnfisk (VENSTRE -> HØJRE) */
+.klovnfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: -120%;           /* starter ude til venstre */
+  bottom: 38vh;
+  z-index: 3;
+  animation: swim-klovn-right 20s linear infinite;
+}
+.klovnfisk img { max-width: 600%; height: auto; transform: scaleX(1); }
+@keyframes swim-klovn-right { 0% { transform: translateX(0); } 100% { transform: translateX(220vw); } }
+
+/* Pudsefisk (ændret: venstre -> højre) */
+.pudsefisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: -120%;           /* starter ude til venstre */
+  bottom: 48vh;          /* behold eller justér lodret placering */
+  z-index: 3;
+  animation: swim-pudse-right 20s linear infinite; /* nyt animation-navn */
+}
+.pudsefisk img { max-width: 600%; height: auto; transform: scaleX(1); }
+
+@keyframes swim-pudse-right {
+  0%   { transform: translateX(0); }
+  100% { transform: translateX(220vw); }
+}
+
+/* Hvidstrubet kirurgfisk (højre -> venstre) */
+.hvidstrubet-kirurgfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 20vw;
+  left: 100%;
+  bottom: 58vh;
+  z-index: 3;
+  animation: swim-hvid 20s linear infinite;
+}
+.hvidstrubet-kirurgfisk img { max-width: 600%; height: auto; transform: scaleX(-1); }
+@keyframes swim-hvid { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
+
+/* Pincetfisk (højre -> venstre) */
+.pincetfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 12vw;
+  left: 100%;
+  bottom: 68vh;
+  z-index: 3;
+  animation: swim-pincet 20s linear infinite;
+}
+.pincetfisk img { max-width: 600%; height: auto; transform: scaleX(-1); }
+@keyframes swim-pincet { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
+
+/* Sortbåndet kirurgfisk (højre -> venstre) */
+.sortbaandet-kirurgfisk {
+  position: absolute;
+  width: 70px;
+  max-width: 12vw;
+  left: 100%;
+  bottom: 78vh;
+  z-index: 3;
+  animation: swim-sort 20s linear infinite;
+}
+.sortbaandet-kirurgfisk img { max-width: 600%; height: auto; transform: scaleX(-1); }
+@keyframes swim-sort { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
