--- a/exd-storcenternord/exd-akvarie/css/style.css
+++ b/exd-storcenternord/exd-akvarie/css/style.css
@@ -316,28 +316,28 @@ body {
 /* FISKE-INFO POP-UP  */
 /* Bestemmer placering af pop-up */
 .facts {
-  position: fixed;
-  right: 16px;
-  bottom: 16px;
-  background-color: rgba(0, 0, 0, 0.85);
-  color: #ffffff;
-  padding: 10px 12px;
-  border-radius: 8px;
-  font-size: 14px;
-  line-height: 1.35;
-  max-width: min(320px, 90vw);
-  box-shadow: 0 8px 22px rgba(0, 0, 0, 0.25);
-  opacity: 0;
-  transform: translateY(8px);
-  transition: opacity 0.25s ease, transform 0.25s ease;
-  pointer-events: none; /*så objektet ikke fanger musen når man flytter den henover*/
-  z-index: 1000;
+  position: fixed;/* Boksen sidder fast i skærmens hjørne, uanset hvad der bevæger sig på siden */
+  right: 550px;  /* Placering 550px fra højre og 16px fra bunden */
+  bottom: 16px; /* Placering 550px fra højre og 16px fra bunden */
+  background-color: rgba(29, 196, 238, 0.82);/* Sort baggrund med let gennemsigtighed */
+  color: #000000;/* Hvid tekst */
+  padding: 10px 12px;  /* Luft omkring teksten inde i boksen */
+  border-radius: 8px;  /* Blødt afrundede hjørner */
+  font-size: 20px;
+  line-height: 1.35;  /* God læsbarhed for teksten */
+  max-width: min(400px, 1000vw);  /* Boksen er max 320px bred – men på små skærme max 90% af skærmens bredde */
+  box-shadow: 0 8px 22px rgba(0, 0, 0, 0.25);  /* Blød skygge under boksen */
+  opacity: 0;  /* Boksen starter usynlig */
+  transform: translateY(8px);   /* Boksen starter 8px længere nede, så den kan glide op når den vises */
+  transition: opacity 0.50s ease, transform 0.25s ease;  /* Gør at boksen blødt fader ind og glider op */
+  pointer-events: none;   /* Boksen må ikke kunne klikkes på – klik skal gå igennem til fiskene */
+  z-index: 1000;  /* Boksen ligger ovenpå alt andet */
 }
 
-/* Tydeliggør tooltip pop-up */
+/* Når boksen skal være synlig */
 .facts.is-visible {
-  opacity: 1;
-  transform: translateY(0);
+  opacity: 1;  /* Gør boksen synlig */
+  transform: translateY(0);  /* Flytter boksen op til sin normale position, så det ligner den glider ind */
 }
 
 
