--- a/exd-storcenternord/exd-akvarie/css/style.css
+++ b/exd-storcenternord/exd-akvarie/css/style.css
@@ -67,30 +67,22 @@ body {
 /* Hover (bliver lidt større og kraftigere lys) */
 .image-button:hover {
   transform: scale(1.15);
-  box-shadow: 
-    0 0 50px rgb(255, 136, 1),
-    0 0 90px rgb(255, 128, 0);
+  box-shadow: 0 0 50px rgb(255, 136, 1), 0 0 90px rgb(255, 128, 0);
 }
 
 /* Pulse-animation (lyser op og ned) */
 @keyframes pulseGlow {
   0% {
     transform: scale(1);
-    box-shadow: 
-      0 0 25px rgba(255, 150, 50, 0.4),
-      0 0 55px rgba(255, 100, 10, 0.2);
+    box-shadow:  0 0 25px rgba(255, 150, 50, 0.4), 0 0 55px rgba(255, 100, 10, 0.2);
   }
   50% {
     transform: scale(1.06);
-    box-shadow: 
-      0 0 50px rgb(255, 136, 1),
-    0 0 90px rgb(255, 128, 0);
+    box-shadow:  0 0 50px rgb(255, 136, 1), 0 0 90px rgb(255, 128, 0);
   }
   100% {
     transform: scale(1);
-    box-shadow: 
-      0 0 25px rgba(255, 150, 50, 0.4),
-      0 0 55px rgba(255, 100, 10, 0.2);
+    box-shadow:  0 0 25px rgba(255, 150, 50, 0.4), 0 0 55px rgba(255, 100, 10, 0.2);
   }
 }
 
